@@ -6,10 +6,6 @@
    provider-name="nutch.org">
 
    <extension-point
-      id="org.apache.nutch.indexer.IndexingFilter"
-      name="Nutch Indexing Filter"/>
-
-   <extension-point
       id="org.apache.nutch.searcher.QueryFilter"
       name="Nutch Query Filter"/>
 
@@ -18,14 +14,6 @@
          <export name="*"/>
       </library>
    </runtime>
-
-   <extension id="org.apache.nutch.search.site.SiteIndexingFilter"
-              name="Nutch Site Indexing Filter"
-              point="org.apache.nutch.indexer.IndexingFilter">
-      <implementation id="SiteIndexingFilter"
-                      class="org.apache.nutch.searcher.site.SiteIndexingFilter"/>
-   </extension>
-
 
    <extension id="org.apache.nutch.searcher.site.SiteQueryFilter"
               name="Nutch Site Query Filter"
